# picovision-boilerplate

./: CMakeLists.txt  LICENSE  README.md  main.cpp  picovision_import.cmake
.github/workflows/: cmake.yml
